<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <!-- Basic Strings -->
    <string name="app_name">Peris</string>
    <string name="app_title">Peris Forum Reader</string>
    <string name="ape_market_id">231</string>
    <string name="android_market_package">de.enlightened.peris</string>
    <string name="analytics_app_tracker">UA-59270103-44</string>
    <string name="app_version">@string/gradle.versionName</string>
    <string name="compile_date">@string/gradle.buildDate</string>
    <string name="copyright_years">2016 - 2017</string>
    <string name="app_author">Nicolai Ehemann</string>
    <string name="app_author_email">en@enlightened.de</string>
    <string name="app_url">https://github.com/McNetic/peris</string>
    <string name="app_info">Project page / issue tracker on https://github.com/McNetic/peris. Please report bugs / feature requests there.</string>
    <string name="license_info">
        This program is free software; you can redistribute it and/or modify it under the terms of
        the GNU General Public License as published by the Free Software Foundation, either version
        3 of the License, or (at your option) any later version.
    </string>

    <!-- Stand Alone App Strings -->
    <string name="server_location">0</string>
    <string name="registration_url">0</string>
    <string name="chat_name">Chat</string>
    <string name="chat_forum">0</string>
    <string name="chat_thread">0</string>
    <string name="new_chat_id">0</string>
    <string name="subforum_id">---ROOT_ID---</string>

    <!-- Theme Related Strings -->
    <string name="default_color">#2277cc</string>
    <color name="color_theme">#2277cc</color>
    <color name="color_theme_text">#ffffff</color>
    <color name="color_sub">#75aadf</color>
    <color name="color_bg">#acccec</color>
    <color name="color_preview">#333333</color>
    <string name="default_theme">5</string>
    <string name="default_background">#F5F5F5</string>
    <string name="default_element_background">#F5F5F5</string>
    <string name="default_element_border">0</string>
    <string name="default_text_color">#222222</string>
    <string name="default_wallpaper_url">0</string>
    <string name="default_divider_color">0</string>

    <!-- Misc. Strings -->
    <string name="peris_core">1.4.0</string>

</resources>